🚀 모든 파일 업로드 (config.ini, portal.db 포함)
- config.ini: 설정 파일
- portal.db: 샘플 데이터
- 모든 템플릿 및 정적 파일
- venv 폴더 제외로 용량 최적화

다른 컴퓨터에서 동일한 환경 구성 가능

--- a/.gitignore
+++ b/.gitignore
@@ -1,71 +1,5 @@
-# 사용자 설정 파일 (GitHub 업로드 방지)
-# config.ini - 다른 컴퓨터와 환경 동일화를 위해 업로드
-# *.db - 샘플 데이터 포함을 위해 업로드
-
-# 임시 작업 폴더
-gpt/
+# 기본 제외 파일들만
 *.log
-.last_sync
-
-# Python 관련
 __pycache__/
 *.pyc
-*.pyo
-*.pyd
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# 업로드 파일 및 사용자 데이터
-uploads/
-temp/
-static/uploads/
-static/images/uploaded/
-
-# 데이터베이스 및 사용자 데이터
-*.db
-*.db-shm
-*.db-wal
-*.sqlite
-*.sqlite3
-
-# 환경 변수
-.env
-.venv
-env/
 venv/
-ENV/
-env.bak/
-venv.bak/
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Temp files
-nul
