--- a/config.ini
+++ b/config.ini
@@ -63,21 +63,24 @@ PARTNERS_QUERY = SELECT
 
 # 사고 정보 조회 쿼리 - 실제 DB에 맞게 수정하세요
 ACCIDENTS_QUERY = SELECT 
-    business_reg_no as business_number,
-    incident_date as accident_date,
-    incident_type as accident_type,
-    incident_location as accident_location,
-    incident_desc as accident_description,
-    injury_grade as injury_level,
-    injury_count as injured_count,
-    cause_analysis,
-    prevent_action as preventive_measures,
+    accident_number,
+    accident_name,
+    accident_time,
+    workplace,
+    accident_grade,
+    major_category,
+    injury_form,
+    injury_type,
+    accident_date,
+    day_of_week,
     report_date,
-    reporter as reporter_name
-    FROM your_schema.your_accidents_table
-    WHERE business_reg_no IS NOT NULL
-      AND incident_date >= '2020-01-01'
-    ORDER BY incident_date DESC
+    building,
+    floor,
+    location_category,
+    location_detail
+    FROM accidents_cache
+    WHERE accident_number IS NOT NULL
+    ORDER BY accident_date DESC
 
 # 환경안전 지시서 조회 쿼리 - 실제 DB에 맞게 수정하세요
 SAFETY_INSTRUCTIONS_QUERY = SELECT 
@@ -156,3 +159,6 @@ DEPARTMENT_QUERY = SELECT dept_code, dept_name, parent_dept_code, dept_level FRO
 
 # 협력사 근로자 조회 쿼리
 CONTRACTOR_QUERY = SELECT worker_id, worker_name, company_name, business_number FROM contractor_workers WHERE 1=1
+
+# 임직원 정보 조회 쿼리
+EMPLOYEE_QUERY = SELECT employee_id, employee_name, department_name, position, email, phone FROM employee_master WHERE 1=1
