🚀 Follow SOP와 Full Process 게시판 구현 완료
- DB 스키마: followsop, fullprocess 테이블 및 관련 설정 테이블 생성
- 관리자 페이지: 동적 컬럼 관리 기능 추가
- 메인 페이지: 리스트/등록/상세 페이지 구현
- API 엔드포인트: CRUD 및 섹션 관리 API 추가
- 메뉴 설정: 작업안전(Follow SOP), 안전문화(Full Process) 메뉴 추가
- UI 개선: 대시보드 1920x940 고정, 검색 필드 간소화
- 리스트 필드: 협력사 근로자 다중 선택 기능 구현

--- a/config.ini
+++ b/config.ini
@@ -181,3 +181,9 @@ CONTRACTOR_QUERY = SELECT worker_id, worker_name, company_name, business_number 
 
 # 임직원 정보 조회 쿼리
 EMPLOYEE_QUERY = SELECT employee_id, employee_name, department_name FROM employee_master WHERE 1=1
+
+# Follow SOP 초기 데이터 조회 쿼리 (나중에 실제 쿼리로 교체)
+FOLLOWSOP_QUERY = SELECT * FROM followsop_source_table WHERE 1=1
+
+# Full Process 초기 데이터 조회 쿼리 (나중에 실제 쿼리로 교체)
+FULLPROCESS_QUERY = SELECT * FROM fullprocess_source_table WHERE 1=1
