--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,5 @@ nul
 # 아이콘 파일 제외
 static/icons/excel-icon.svg
 
-# 데이터베이스 파일 제외 (운영/개발 환경 분리)
-# portal.db  # 스키마 동기화를 위해 일단 포함
-# *.db
+# 데이터베이스 파일 포함 (GitHub에 업로드)
+# portal.db는 이제 GitHub에 포함됩니다
