fix: .gitignore 수정 - tools 폴더의 fix_*.py와 check_*.py 파일 허용
- tools 폴더의 스크립트들은 중요하므로 제외하지 않음
- 루트 디렉토리의 임시 파일들만 제외하도록 수정

--- a/.gitignore
+++ b/.gitignore
@@ -43,8 +43,9 @@ test_*.py
 migrate_*.py
 phase*.py
 phase*.sql
-fix_*.py
-check_*.py
+# fix_*.py와 check_*.py는 tools 폴더에 필요하므로 루트에서만 제외
+/fix_*.py
+/check_*.py
 emergency_migrate.py
 complete_migration_fix.py
 complete_migration_fix.sql
