지시서 메인 -> 캐시

--- a/config.ini
+++ b/config.ini
@@ -71,12 +71,12 @@ building_query = SELECT building_code, building_name, SITE, SITE_TYPE FROM build
 department_query = SELECT dept_code, dept_name, parent_dept_code FROM departments WHERE 1=1
 contractor_query = SELECT worker_id, worker_name, company_name, business_number FROM contractors WHERE 1=1
 employee_query = SELECT employee_id, employee_name, department_name FROM employees WHERE 1=1
-safety_instructions_query = SELECT * FROM safety_instructions_cache WHERE issue_number IS NOT NULL
+safety_instructions_query = SELECT * FROM safety_instructions WHERE issue_number IS NOT NULL
 followsop_query = SELECT * FROM 외부_followsop_테이블 WHERE 1=1
 fullprocess_query = SELECT * FROM 외부_fullprocess_테이블 WHERE 1=1
 
 [CONTENT_DATA_QUERIES]
-safety_instructions_query = SELECT * FROM safety_instructions_cache WHERE issue_number IS NOT NULL AND (is_deleted = 0 OR is_deleted IS NULL)
+safety_instructions_query = SELECT * FROM safety_instructions WHERE issue_number IS NOT NULL AND (is_deleted = 0 OR is_deleted IS NULL)
 followsop_query = SELECT * FROM 외부_followsop_테이블 WHERE 1=1
 fullprocess_query = SELECT * FROM 외부_fullprocess_테이블 WHERE 1=1
 
