sqlite문법 싹다제거3(자동메일)

--- a/config.ini
+++ b/config.ini
@@ -82,6 +82,23 @@ followsop_query = SELECT * FROM 외부_followsop_테이블 WHERE 1=1
 fullprocess_query = SELECT * FROM 외부_fullprocess_테이블 WHERE 1=1
 partner_change_requests_query = SELECT * FROM 외부_partner_change_requests_테이블 WHERE 1=1
 
+[SCORING_MAPPING_SAFETY]
+# 안전지시서 scoring 매핑 (외부DB컬럼명=내부item_id)
+helmet_violation_count = item_1
+procedure_violation_count = item_2
+ppe_violation_count = item_3
+training_violation_count = item_4
+safety_rule_violation_count = item_5
+# 실제 외부 DB 컬럼명으로 수정 필요
+
+[SCORING_MAPPING_FOLLOWSOP]
+# Follow SOP scoring 매핑 (필요시)
+# external_column_name = item_1
+
+[SCORING_MAPPING_FULLPROCESS]
+# Full Process scoring 매핑 (필요시)
+# external_column_name = item_1
+
 [SSO]
 # Toggle SSO globally. Dev: false, Prod: true
 sso_enabled = False
