SSO인증체계 완료, scoring 최종완료(아쉽지만..크기더 작게하는데 실패함

--- a/config.ini
+++ b/config.ini
@@ -96,26 +96,58 @@ safety_rule_violation_count = item_5
 # external_column_name = item_1
 
 [SCORING_MAPPING_FULLPROCESS]
-# Full Process scoring 매핑 (필요시)
-# external_column_name = item_1
+# Full Process scoring 매핑 예시 - column_key별 섹션으로 구성됨
+
+# TBM 체크리스트 scoring
+[tbm]
+item_1 = tbm_helmet_check
+item_2 = tbm_safety_brief
+item_3 = tbm_ppe_status
+item_4 = tbm_hazard_id
+
+# 안전점검 scoring
+[safety_check]
+item_1 = safety_procedure_follow
+item_2 = safety_barrier_check
+item_3 = safety_emergency_prep
+
+# 품질검사 scoring
+[quality_audit]
+item_1 = quality_standard_comply
+item_2 = quality_doc_complete
+item_3 = quality_test_result
+
+# 테스트용 scoring 매핑
+[scre223]
+item_1 = scre223_item_1
+item_2 = scre223_item_2
+item_3 = scre223_item_3
+
+[test224]
+item_1 = test224_item_1
+item_2 = test224_item_2
+
+[test225]
+item_1 = test225_item_1
+item_2 = test225_item_2
+item_3 = test225_item_3
+item_4 = test225_item_4
 
 [SSO]
-# Toggle SSO globally. Dev: false, Prod: true
-sso_enabled = False
+# SSO 샘플 설정 (config.py에서 이전)
+sso_enabled = True
 
-# IdP settings (fill in production)
-idp_entity_id = https://example-idp.company.com
-idp_signout_url = https://example-idp.company.com/logout
-idp_client_id = example-client-id
-idp_client_secret = example-client-secret
+# IdP settings
+idp_entity_id = example
+idp_signout_url = example
+idp_client_id = example
 
 # SP settings
-sp_redirect_url = https://example-portal.company.com/sso/callback
-sp_base_url = https://example-portal.company.com
+sp_redirect_url = https://localhost:44369/acs
 
 # Certificate settings
-cert_file_path = cert/idp.cer
-cert_enabled = false
+cert_file_path = Templates/Cert/
+cert_file_name = Idp.cer
 
 # Dev session seed (used when sso_enabled=false)
 dev_mode = false
