SSO인증 추가보완4

--- a/config.ini
+++ b/config.ini
@@ -149,6 +149,12 @@ sp_redirect_url = https://localhost:44369/acs
 cert_file_path = Templates/Cert/
 cert_file_name = Idp.cer
 
+# SSL settings (HTTPS용)
+ssl_cert_file = Templates/Cert/cert.pem
+ssl_key_file = Templates/Cert/key.pem
+ssl_port = 44369
+http_port = 5000
+
 # Dev session seed (used when sso_enabled=false)
 dev_mode = false
 dev_user_id = dev_user
