SSO인증 추가보완5

--- a/config.ini
+++ b/config.ini
@@ -143,7 +143,7 @@ idp_signout_url = example
 idp_client_id = example
 
 # SP settings
-sp_redirect_url = https://localhost:44369/acs
+sp_redirect_url = https://127.0.0.1:44369/acs
 
 # Certificate settings
 cert_file_path = Templates/Cert/
