--- a/config.ini
+++ b/config.ini
@@ -71,6 +71,7 @@ building_query = SELECT building_code, building_name, SITE, SITE_TYPE FROM build
 department_query = SELECT dept_code, dept_name, parent_dept_code FROM departments WHERE 1=1
 contractor_query = SELECT worker_id, worker_name, company_name, business_number FROM contractors WHERE 1=1
 employee_query = SELECT employee_id, employee_name, department_name FROM employees WHERE 1=1
+division_query = SELECT division_code, division_name, parent_division_code, division_level, division_manager, division_location FROM divisions WHERE 1=1 ORDER BY division_name
 safety_instructions_query = SELECT * FROM safety_instructions WHERE issue_number IS NOT NULL
 followsop_query = SELECT * FROM 외부_followsop_테이블 WHERE 1=1
 fullprocess_query = SELECT * FROM 외부_fullprocess_테이블 WHERE 1=1
