--- a/config.ini
+++ b/config.ini
@@ -144,7 +144,7 @@ idp_signout_url = example
 idp_client_id = example
 
 # SP settings
-sp_redirect_url = https://127.0.0.1:44369/acs
+sp_redirect_url = https://partnerehs.samsungds.net/acs
 
 # Certificate settings
 cert_file_path = Templates/Cert/
