SSo운영환경 업그레이드

--- a/config.ini
+++ b/config.ini
@@ -34,6 +34,13 @@ dashboard_enabled = True
 [COLUMNS]
 sync_on_startup = false
 
+[PERMISSION]
+enabled = true
+cache_ttl = 300
+log_access = true
+default_role = user
+super_admin_role = super_admin
+
 [MASTER_DATA_QUERIES]
 partners_query = SELECT
 	business_number,
@@ -84,41 +91,32 @@ fullprocess_query = SELECT * FROM 외부_fullprocess_테이블 WHERE 1=1
 partner_change_requests_query = SELECT * FROM 외부_partner_change_requests_테이블 WHERE 1=1
 
 [SCORING_MAPPING_SAFETY]
-# 안전지시서 scoring 매핑 (외부DB컬럼명=내부item_id)
 helmet_violation_count = item_1
 procedure_violation_count = item_2
 ppe_violation_count = item_3
 training_violation_count = item_4
 safety_rule_violation_count = item_5
-# 실제 외부 DB 컬럼명으로 수정 필요
 
 [SCORING_MAPPING_FOLLOWSOP]
-# Follow SOP scoring 매핑 (필요시)
-# external_column_name = item_1
 
 [SCORING_MAPPING_FULLPROCESS]
-# Full Process scoring 매핑 예시 - column_key별 섹션으로 구성됨
 
-# TBM 체크리스트 scoring
 [tbm]
 item_1 = tbm_helmet_check
 item_2 = tbm_safety_brief
 item_3 = tbm_ppe_status
 item_4 = tbm_hazard_id
 
-# 안전점검 scoring
 [safety_check]
 item_1 = safety_procedure_follow
 item_2 = safety_barrier_check
 item_3 = safety_emergency_prep
 
-# 품질검사 scoring
 [quality_audit]
 item_1 = quality_standard_comply
 item_2 = quality_doc_complete
 item_3 = quality_test_result
 
-# 테스트용 scoring 매핑
 [scre223]
 item_1 = scre223_item_1
 item_2 = scre223_item_2
@@ -135,31 +133,35 @@ item_3 = test225_item_3
 item_4 = test225_item_4
 
 [SSO]
-# SSO 샘플 설정 (config.py에서 이전)
 sso_enabled = True
-
-# IdP settings
 idp_entity_id = example
 idp_signout_url = example
 idp_client_id = example
-
-# SP settings
-sp_redirect_url = https://partnerehs.samsungds.net/acs
-
-# Certificate settings
+sp_redirect_url = https://example.com/acs
 cert_file_path = Templates/Cert/
 cert_file_name = Idp.cer
-
-# SSL settings (HTTPS용)
 ssl_cert_file = Templates/Cert/cert.pem
 ssl_key_file = Templates/Cert/key.pem
 ssl_port = 44369
 http_port = 5000
-
-# Dev session seed (used when sso_enabled=false)
 dev_mode = false
 dev_user_id = dev_user
 dev_user_name = 개발자
 dev_department = 개발팀
 dev_grade = 과장
 dev_simulate_flow = false
+enabled = false
+ldap_server = ldap://localhost:389
+ldap_base_dn = dc=company,dc=com
+api_url = http://localhost:8080/api/users
+
+[APPLICATION]
+host = 0.0.0.0
+port = 5000
+
+[REDIS]
+host = localhost
+port = 6379
+db = 0
+enabled = false
+
