리팩토링 Phase3 완료

--- a/config.ini
+++ b/config.ini
@@ -133,7 +133,7 @@ item_3 = test225_item_3
 item_4 = test225_item_4
 
 [SSO]
-sso_enabled = True
+sso_enabled = false
 idp_entity_id = example
 idp_signout_url = example
 idp_client_id = example
