리팩토링 전부끝 제출직전

--- a/config.ini
+++ b/config.ini
@@ -40,6 +40,7 @@ cache_ttl = 300
 log_access = true
 default_role = user
 super_admin_role = super_admin
+super_admin_users = dev_user
 
 [MASTER_DATA_QUERIES]
 partners_query = SELECT
@@ -135,7 +136,7 @@ item_4 = test225_item_4
 [SSO]
 sso_enabled = false
 idp_entity_id = example
-idp_signout_url = example
+idp_signout_url = http://127.0.0.1:5000/
 idp_client_id = example
 sp_redirect_url = https://example.com/acs
 cert_file_path = Templates/Cert/
@@ -144,13 +145,13 @@ ssl_cert_file = Templates/Cert/cert.pem
 ssl_key_file = Templates/Cert/key.pem
 ssl_port = 44369
 http_port = 5000
-dev_mode = false
+dev_mode = true
 dev_user_id = dev_user
 dev_user_name = 개발자
 dev_department = 개발팀
 dev_grade = 과장
-dev_simulate_flow = false
-enabled = false
+dev_simulate_flow = true
+enabled = true
 ldap_server = ldap://localhost:389
 ldap_base_dn = dc=company,dc=com
 api_url = http://localhost:8080/api/users
