리팩토링 전부끝 제출직전2

--- a/config.ini
+++ b/config.ini
@@ -29,6 +29,10 @@ log_db_backend = true
 dashboard_url = https://your-dashboard.com
 dashboard_enabled = True
 
+[USAGE_DASHBOARD]
+portal_trend_query = SELECT CURRENT_DATE::date AS date, 0::int AS count
+chatbot_trend_query = SELECT CURRENT_DATE::date AS date, 0::int AS count
+
 [SQL_QUERIES]
 
 [COLUMNS]
