제출전 마지막 수정

--- a/config.ini
+++ b/config.ini
@@ -18,12 +18,20 @@ content_data_once = false
 
 [SECURITY]
 max_upload_size_mb = 10
-allowed_extensions = pdf,doc,docx,xls,xlsx,png,jpg,jpeg
+allowed_extensions = pdf,doc,docx,xls,xlsx,xlsm,xlsb,ppt,pptx,csv,txt,png,jpg,jpeg,gif,bmp,tiff,zip,html,htm
+
 
 [LOGGING]
 log_level = INFO
 log_file = app.log
 log_db_backend = true
+
+[NOTIFICATION]
+chatbot_webhook_url = http://127.0.0.1:8000/webhook/portal-notification
+chatbot_auth_token = 
+chatbot_timeout = 5
+
+
 
 [DASHBOARD]
 dashboard_url = https://your-dashboard.com
@@ -39,7 +47,7 @@ chatbot_trend_query = SELECT CURRENT_DATE::date AS date, 0::int AS count
 sync_on_startup = false
 
 [PERMISSION]
-enabled = true
+enabled = false
 cache_ttl = 300
 log_access = true
 default_role = user
@@ -138,7 +146,7 @@ item_3 = test225_item_3
 item_4 = test225_item_4
 
 [SSO]
-sso_enabled = false
+sso_enabled = True
 idp_entity_id = example
 idp_signout_url = http://127.0.0.1:5000/
 idp_client_id = example
@@ -149,12 +157,12 @@ ssl_cert_file = Templates/Cert/cert.pem
 ssl_key_file = Templates/Cert/key.pem
 ssl_port = 44369
 http_port = 5000
-dev_mode = true
+dev_mode = False
 dev_user_id = dev_user
 dev_user_name = 개발자
 dev_department = 개발팀
 dev_grade = 과장
-dev_simulate_flow = true
+dev_simulate_flow = False
 enabled = true
 ldap_server = ldap://localhost:389
 ldap_base_dn = dc=company,dc=com
